# sphinx-notionbuilder

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CLAUDE.md  README.rst  bootstrap-sample-env.py  notion-sandbox-issue-1.md  notion-sandbox-issue-2.md  publish-sample.sh  pyproject.toml  pyrightconfig.json  sample.env  spelling_private_dict.txt  upload_notion.py  zizmor.yml
.github/workflows/: ci.yml  lint.yml  publish-notion.yml  release.yml
docs/: __init__.py  configuration.rst
newsfragments/: +append-before-delete.change.rst  +detected-extensions-optional.change  +heading-4-support.change.rst  +page-id.change.rst  +require-existing-page.change.rst  +require-ultimate-notion-0-9-10.change.rst  +require-ultimate-notion-0-9-9.change.rst  +strip-nested-archived.change.rst  +tabs-support.change.rst  829.change.rst  831.change.rst  842.change.rst  845.change.rst  868.change.rst  869.change.rst  870.change.rst  871.change.rst  872.change.rst  873.change.rst  874.change.rst  875.change.rst  876.change.rst  877.change.rst  878.change.rst  879.change.rst  880.change.rst  881.change.rst  882.change.rst  883.change.rst  884.change.rst  885.change.rst  886.change.rst  887.change.rst  888.change.rst  889.change.rst  890.change.rst
sample/: __init__.py  conf.py  example_module.py  index.rst  notion-sha-mapping.json  spelling_wordlist.txt
sample/_static/: test-file.txt
sample_warnings/: __init__.py  conf.py  example_module.py  index.rst  other.rst
sample_warnings/_static/: example.txt
sandbox_issues/: 001-simplepage-name-property-metadata.md  002-typed-list-responses-missing-type-object.md  003-comments-endpoint-query-parameter-dispatching.md  004-child-page-and-database-block-types-in-list-children.md  005-database-retrieval-and-query-endpoints.md  006-non-empty-comments-example-for-discussion-testing.md
scripts/: update_sample.py
src/_notion_scripts/: __init__.py  update_sha_mapping.py  upload.py  upload_files.py
src/sphinx_notion/: __init__.py  _upload.py  upload.py
src/sphinx_notionbuilder/: __init__.py
tests/: __init__.py  _wiremock.py  conftest.py  helpers.py  test_builder.py  test_integration.py  test_publish.py  test_upload.py  test_upload_mock_api.py  test_upload_mock_api_helpers.py  test_upload_to_notion.py  test_upload_unit.py
tests/notion_sandbox/: README.md  __init__.py  notion-openapi.yml  notion-wiremock-stubs.json  openapi_to_wiremock.py
tests/notion_sandbox/sandbox_issues/: database-retrieval-and-query.md  file-upload-endpoints.md
tests/test_upload/: test_help.txt
